--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "YOUR DB NAME",
+    "username": "Joe",
+    "password": "SuperChups4534",
+    "database": "bangazon_site",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
