--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.1",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "method-override": "^2.3.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.3.0",
