--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R list --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
-    "dotenv": "^5.0.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
